# link_tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build_errors.txt  build_out.txt  install.sh  run_cargo.bat  test_out.txt
.github/workflows/: ci.yml  release.yml  scoop.yml
.link/: index.db  show.html
assets/: template.html  viewer.js
assets/viewer/: base.css  components.css  layout.css
bucket/: linkmap.json
docs/: USER_MANUAL.md
examples/test_repo/: app.py  helpers.py  main.js  pyrightconfig.json  utils.js
examples/test_repo/.link/: index.db
packaging/homebrew/: linkmap.rb  linkmap.rb.template
packaging/scoop/: linkmap.json.template
queries/: go.scm  javascript.scm  php.scm  python.scm  rust.scm  tsx.scm  typescript.scm
src/: db.rs  error.rs  extractor.rs  hasher.rs  history.rs  intel.rs  lang.rs  main.rs  parser.rs  resolver.rs  scan.rs  snapshot.rs  ui.rs  viewer.rs
src/commands/: diff.rs  explain.rs  history.rs  init.rs  list.rs  mod.rs  search.rs  show.rs  snapshot.rs  stats.rs  update.rs
src/db/: mod.rs  models.rs  schema.rs
src/framework/: laravel.rs  mod.rs
src/viewer/: graph.rs  html.rs  json.rs  mod.rs
tests/: integration.rs
