[package]
name = "link"
version = "0.1.0"
edition = "2021"
description = "Git for understanding code. Fast, local, static code structure analysis."
license = "MIT"

[[bin]]
name = "link"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2"
open = "5"
anyhow = "1"
streaming-iterator = "0.1.9"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
